Alteração endereço pasta

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Alura</title>
@@ -24,11 +24,11 @@
       </p>
 
       <p id="missao">
-        <em
-          >Nossa missão é:
-          <strong
-            >"Proporcionar auto-estima e qualidade de vida aos clientes"</strong
-          ></em
+        <em>
+          Nossa missão é:
+          <strong>
+            "Proporcionar auto-estima e qualidade de vida aos clientes"
+          </strong></em
         >.
       </p>
 
@@ -50,7 +50,6 @@
 
       <img id="imagem-beneficios" src="/imagens/beneficios.jpg" alt="" />
     </article>
-
-    Esta é uma alteração.
+    Trabalhando no footer.
   </body>
 </html>
