Começando Pagina de Produtos

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/reset.css" /> -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Alura</title>
@@ -11,7 +12,7 @@
     <header>
       <h1>Barbearia Alura</h1>
 
-      <img id="banner" src="/imagens/banner.jpg" alt="cadeira-barbearia" />
+      <img id="banner" src="imagens/banner.jpg" alt="cadeira-barbearia" />
     </header>
 
     <section id="sobre">
@@ -48,7 +49,7 @@
         <li>Profissionais Qualificados</li>
       </ul>
 
-      <img id="imagem-beneficios" src="/imagens/beneficios.jpg" alt="" />
+      <img src="imagens/beneficios.jpg" id="imagem-beneficios" alt="" />
     </article>
     Trabalhando no footer.
   </body>
